# CppReflection

./: .gitignore  CMakeLists.txt  LINKS.txt  Links_Examples.txt  README.md  README.txt
examples/: class_layout.cpp  enum_to_string.cpp  list_of_types_sizes.cpp
reflection/: CMakeLists.txt  main.cpp
utilities/: CMakeLists.txt  HexConverter.cpp  PerfUtilities.hpp  Random.hpp  ThreadUtilities.cpp  ThreadUtilities.hpp  main.cpp
